--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,7 +12,7 @@
   <link rel='stylesheet' href='/css/fonts.css' />
   <link rel='stylesheet' href='/css/style.css' />
 
-
+  <link rel="icon" type="image/png" href="/images/logo.png">
 </head>
 
 <body>
